@@ -14,6 +14,7 @@ import com.ideas2it.healthcare.common.ErrorConstants;
 import com.ideas2it.healthcare.common.MessageConstants;
 import com.ideas2it.healthcare.dto.ClinicDto;
 import com.ideas2it.healthcare.exception.NotFoundException;
+import com.ideas2it.healthcare.exception.SqlException;
 import com.ideas2it.healthcare.mapper.ClinicMapper;
 import com.ideas2it.healthcare.model.Clinic;
 import com.ideas2it.healthcare.repository.ClinicRepository;
@@ -47,55 +48,79 @@ public class ClinicServiceImpl implements ClinicService {
      */
     public ClinicDto addClinic(ClinicDto clinicDto) {
         Clinic clinic = ClinicMapper.fromDto(clinicDto);
-        return ClinicMapper.toDto(clinicRepository.save(clinic));
+        try {
+            return ClinicMapper.toDto(clinicRepository.save(clinic));
+        } catch (SqlException exception) {
+            throw new SqlException(ErrorConstants.DATABASE_NOT_FOUND);
+        }
     }
 
     /**
      * {@inheritDoc}
      */
     public List<ClinicDto> getClinics(Integer pageNumber, Integer totalRows) {
-        List<Clinic> clinics = clinicRepository.findAllByStatus(Constants.ACTIVE,
-                PageRequest.of(pageNumber, totalRows)).toList();
-        if (clinics.isEmpty()) {
-            throw new NotFoundException(ErrorConstants.CLINIC_NOT_FOUND);
+        try {
+            List<Clinic> clinics = clinicRepository.findAllByStatus(Constants.ACTIVE,
+                    PageRequest.of(pageNumber, totalRows)).toList();
+            if (clinics.isEmpty()) {
+                throw new NotFoundException(ErrorConstants.CLINIC_NOT_FOUND);
+            }
+            return clinics.stream()
+                    .map(ClinicMapper::toDto)
+                    .collect(Collectors.toList());
+        } catch (SqlException exception) {
+            throw new SqlException(ErrorConstants.DATABASE_NOT_FOUND);
         }
-        return clinics.stream()
-                .map(ClinicMapper::toDto)
-                .collect(Collectors.toList());
     }
 
     /**
      * {@inheritDoc}
      */
     public ClinicDto getClinicById(Integer id) {
-        return clinicRepository.findByIdAndStatus(id, Constants.ACTIVE).stream().
-                map(ClinicMapper::toDto)
-                .findFirst()
-                .orElseThrow(() -> new NotFoundException(ErrorConstants.CLINIC_NOT_FOUND));
+        try {
+            return clinicRepository.findByIdAndStatus(id, Constants.ACTIVE).stream().
+                    map(ClinicMapper::toDto)
+                    .findFirst()
+                    .orElseThrow(() -> new NotFoundException(ErrorConstants.CLINIC_NOT_FOUND));
+        } catch (SqlException exception) {
+            throw new SqlException(ErrorConstants.DATABASE_NOT_FOUND);
+        }
     }
 
     /**
      * {@inheritDoc}
      */
     public ClinicDto updateClinic(ClinicDto clinicDto) {
-        return ClinicMapper.toDto(clinicRepository.save(ClinicMapper.fromDto(clinicDto)));
+        try {
+            return ClinicMapper.toDto(clinicRepository.save(ClinicMapper.fromDto(clinicDto)));
+        } catch (SqlException exception) {
+            throw new SqlException(ErrorConstants.DATABASE_NOT_FOUND);
+        }
     }
 
     /**
      * {@inheritDoc}
      */
     public String removeClinicById(Integer id) {
-        if (1 <= clinicRepository.removeClinicById(id)) {
-            return MessageConstants.CLINIC_REMOVED_SUCCESSFULLY;
+        try {
+            if (1 <= clinicRepository.removeClinicById(id)) {
+                return MessageConstants.CLINIC_DELETED_SUCCESSFULLY;
+            }
+            throw new NotFoundException(ErrorConstants.CLINIC_NOT_FOUND);
+        } catch (SqlException exception) {
+            throw new SqlException(ErrorConstants.DATABASE_NOT_FOUND);
         }
-        throw new NotFoundException(ErrorConstants.CLINIC_NOT_FOUND);
     }
 
     /**
      * {@inheritDoc}
      */
     public Integer countOfClinics() {
-        return clinicRepository.countByStatus(Constants.ACTIVE);
+        try {
+            return clinicRepository.countByStatus(Constants.ACTIVE);
+        } catch (SqlException exception) {
+            throw new SqlException(ErrorConstants.DATABASE_NOT_FOUND);
+        }
     }
 
 }
