@@ -14,6 +14,7 @@ import com.ideas2it.healthcare.common.ErrorConstants;
 import com.ideas2it.healthcare.common.MessageConstants;
 import com.ideas2it.healthcare.dto.FeedbackDto;
 import com.ideas2it.healthcare.exception.NotFoundException;
+import com.ideas2it.healthcare.exception.SqlException;
 import com.ideas2it.healthcare.mapper.FeedbackMapper;
 import com.ideas2it.healthcare.repository.FeedbackRepository;
 import com.ideas2it.healthcare.service.FeedbackService;
@@ -44,17 +45,25 @@ public class FeedbackServiceImpl implements FeedbackService {
      * {@inheritDoc}
      */
     public FeedbackDto addFeedback(FeedbackDto feedbackDto) {
+        try {
         return FeedbackMapper.toDto(feedbackRepository.save(FeedbackMapper.fromDto(feedbackDto)));
+        } catch (SqlException exception) {
+            throw new SqlException(exception.getMessage());
+        }
     }
 
     /**
      * {@inheritDoc}
      */
     public String deleteFeedback(Integer id) {
-        if (1 <= feedbackRepository.removeFeedbackById(id)) {
-            return MessageConstants.FEEDBACK_REMOVED_SUCCESSFULLY;
+        try {
+            if (1 <= feedbackRepository.removeFeedbackById(id)) {
+                return MessageConstants.FEEDBACK_DELETED_SUCCESSFULLY;
+            }
+            throw new NotFoundException(ErrorConstants.FEEDBACK_NOT_FOUND);
+        } catch (SqlException exception) {
+            throw new SqlException(exception.getMessage());
         }
-        throw new NotFoundException(ErrorConstants.FEEDBACK_NOT_FOUND);
     }
 
     /**
@@ -63,17 +72,25 @@ public class FeedbackServiceImpl implements FeedbackService {
     @Override
     public List<FeedbackDto> getFeedbackByDoctorId(Integer doctorId, Integer pageNumber,
                                                    Integer totalRows) {
-        return feedbackRepository.findByDoctorIdAndStatus(doctorId, Constants.ACTIVE, PageRequest
-                        .of(pageNumber, totalRows)).toList()
-                .stream().map(FeedbackMapper::toDto)
-                .collect(Collectors.toList());
+        try {
+            return feedbackRepository.findByDoctorIdAndStatus(doctorId, Constants.ACTIVE, PageRequest
+                            .of(pageNumber, totalRows)).toList()
+                    .stream().map(FeedbackMapper::toDto)
+                    .collect(Collectors.toList());
+        } catch (SqlException exception) {
+            throw new SqlException(exception.getMessage());
+        }
     }
 
     /**
      * {@inheritDoc}
      */
     public Integer countOfFeedbacksByDoctorId(Integer doctorId) {
-        return feedbackRepository.countByDoctorIdAndStatus(doctorId, Constants.ACTIVE);
+        try {
+            return feedbackRepository.countByDoctorIdAndStatus(doctorId, Constants.ACTIVE);
+        } catch (SqlException exception) {
+            throw new SqlException(exception.getMessage());
+        }
     }
 
 }
